# omni

./: Cargo.toml  README.md  justfile  omni.toml
.github/workflows/: release.yml  testing.yml
src/: config.rs  init.rs  install.rs  main.rs  pm.rs  util.rs
tests/: cli.rs  init_commands.rs.bkp  install_commands.rs
